--- a/infonomy_server/templates/home.html
+++ b/infonomy_server/templates/home.html
@@ -12,13 +12,16 @@
     
     <div class="recent-questions">
         <h2>Recent Questions</h2>
-        {% if questions %}
+        {% if questions_with_buyers %}
             <div class="questions-list">
-                {% for question in questions %}
+                {% for item in questions_with_buyers %}
+                    {% set question = item.question %}
+                    {% set buyer = item.buyer %}
                     <div class="question-card">
                         <div class="question-header">
                             <h3><a href="/questions/{{ question.id }}">{{ question.query or "No title" }}</a></h3>
                             <span class="question-meta">
+                                by <a href="/users/{{ buyer.id }}" class="username-link">{{ buyer.username }}</a> | 
                                 Budget: ${{ "%.2f"|format(question.max_budget) }} | 
                                 Priority: {{ question.priority }} | 
                                 {{ question.created_at.strftime('%Y-%m-%d %H:%M') }}
