--- a/infonomy_server/templates/home.html
+++ b/infonomy_server/templates/home.html
@@ -76,7 +76,7 @@ function updateAuthContent() {
                             <label for="priority">Priority:</label>
                             <select name="priority" id="priority">
                                 <option value="0">Low (0)</option>
-                                <option value="1">High (1)</option>
+                                <option value="1" selected>High (1)</option>
                             </select>
                         </div>
                     </div>
